test/corpus/crossrefs.txt
================================================================================
Cross-reference
================================================================================
See {@fig:architecture} for the diagram.
--------------------------------------------------------------------------------
(document
  (text)
  (cross_reference
    (cross_ref_target))
  (text))

================================================================================
Escaped cross-reference
================================================================================
Literal \{@ref} text.
--------------------------------------------------------------------------------
(document
  (text)
  (escaped_sequence)
  (text))
